# Windminer

./: CMakeLists.txt  CONTRIBUTING.md  README.md
docs/: ARCHITECTURE_OVERVIEW.md  CORE_CONCEPT.md  QUICK_START_GUIDE.md  WILDLIFE_SAFETY_GUIDE.md
src/aln/: README.md
src/aln/include/: AlnBridge.hpp  AlnTypes.hpp  WildlifeAudit.hpp
src/aln/solidity/: KarmaDistributor.sol  WindnetRegistry.sol
src/aln/src/: AlnBridge.cpp
src/cpp/: MainPlanDemo.cpp  ShardIo.cpp  WindClimatePhoenix.cpp  WindnetCaptureModel.cpp  WindnetEcoImpact.cpp  WindnetGeometry.cpp
src/cpp/include/: ShardIo.hpp  WindClimatePhoenix.hpp  WindnetCaptureModel.hpp  WindnetEcoImpact.hpp  WindnetGeometry.hpp
src/rust/: Cargo.toml
src/rust/src/: capture.rs  ffi.rs  geometry.rs  impact.rs  lib.rs  sensor.rs
