[package]
name = "windminer"
version = "1.0.0"
edition = "2021"
authors = ["Ecotribute Research Team <research@ecotribute.org>"]
description = "Urban Windnet Trash-Collector Siting & Optimization Framework - Rust Modules"
license = "MIT"
repository = "https://github.com/ecotribute/windminer"

[lib]
name = "windminer_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "windminer_sensor"
path = "src/bin/sensor_main.rs"

[[bin]]
name = "windminer_cli"
path = "src/bin/cli_main.rs"

[dependencies]
# Data Processing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Math & Statistics
nalgebra = "0.32"
statrs = "0.16"

# Async & Networking (for sensor data)
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Hardware Integration (sensor firmware)
embedded-hal = "0.2"
nb = "1.1"

# Logging
log = "0.4"
env_logger = "0.10"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# C++ FFI Integration
ffi-support = "0.4"

[dev-dependencies]
criterion = "0.5"
mockall = "0.11"

[[bench]]
name = "capture_model_bench"
harness = false

[features]
default = ["std"]
std = []
embedded = ["embedded-hal"]
sensor = ["tokio", "reqwest"]
